@@ -12,7 +12,7 @@ angband.res: angband.rc
 
 oangband_SOURCES = \
   z-util.c z-virt.c z-form.c z-rand.c z-term.c z-file.c z-quark.c \
-  z-msg.c \
+  z-msg.c z-textblock.c \
   variable.c tables.c util.c cave.c \
   object1.c object2.c monster1.c monster2.c \
   xtra1.c xtra2.c spells1.c spells2.c \
@@ -27,7 +27,7 @@ oangband_SOURCES = \
   angband.h config.h defines.h externs.h h-basic.h \
   init.h ui-event.h \
   types.h z-form.h z-rand.h z-term.h z-util.h z-quark.h \
-  z-virt.h z-file.h z-msg.h main.h 
+  z-virt.h z-file.h z-msg.h main.h z-textblock.h
 
 EXTRA_oangband_SOURCES = \
   main-sla.c \
